--- a/main.ipynb
+++ b/main.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "a4736ad7",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "2425dd1f",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "65c7a6d3",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "dae65292",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "951279de",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "a0e361d9",
    "metadata": {},
    "outputs": [
@@ -215,8 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "347 ns ± 10.3 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.14 µs ± 7.57 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "560 ns ± 14.1 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "266 ns ± 2.76 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "114fd0f0",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "5ef92ee7",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "9beb12db",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "355ac05e",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9cd14e9b",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "90847dad",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "637a0200",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a16a71ff",
    "metadata": {},
    "outputs": [
@@ -471,9 +471,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.45239805 0.88390685 0.1752327  0.72476505]\n",
-      "[[0.64098759 0.79882884 0.366072   0.40275769 0.79294513]\n",
-      " [0.71591144 0.07096043 0.52511407 0.84450022 0.23746729]]\n"
+      "[0.4195     0.05318058 0.23997381 0.56362527]\n",
+      "=============\n",
+      "[[0.18168307 0.38060775 0.6644252  0.41587458 0.76807154]\n",
+      " [0.02829926 0.75712041 0.06066739 0.37112529 0.21499683]]\n"
      ]
     }
    ],
@@ -483,14 +484,151 @@
     "randarr = np.random.rand(4) # No. of times to render\n",
     "print(randarr)\n",
     "\n",
-    "randarr1 = np.random.rand(2, 5)\n",
+    "print(\"=============\")\n",
+    "\n",
+    "randarr1 = np.random.rand(2, 5)  # These are dimensions\n",
     "print(randarr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9c06d818",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.81436764 1.31015482 1.58669962]\n",
+      " [1.41390187 0.02803093 0.51470789]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Generate random between -1 to 1 close to 0\n",
+    "\n",
+    "r = np.random.randn(2, 3) ## Shape\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e8178338",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.26043936 0.93542289 0.03932523 0.5662606 ]\n",
+      " [0.91751321 0.55042568 0.63880451 0.59223625]\n",
+      " [0.45337012 0.34272014 0.45966359 0.54111321]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Genearte random numbers between [0.0, 1.0) -> 1 is not inclusive\n",
+    "\n",
+    "arr = np.random.ranf((3, 4))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "31ca4f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 5, 1, 4],\n",
+       "       [5, 5, 4, 2]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Generate random numbers int within a range\n",
+    "\n",
+    "rnum = np.random.randint(low=1, high=6, size=(2, 4)) \n",
+    "rnum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47705eb3",
+   "metadata": {},
+   "source": [
+    "## Datatypes in Numpy arrays\n",
+    "- You can specify the datatype of a numpy array while creating it using the `dtype` parameter\n",
+    "- You can also change the datatype of an existing numpy array using the `.astype()` method \n",
+    "- Numpy supports various datatypes like `int`, `float`, `complex`, `bool`, `object`, etc.\n",
+    "- In summary, while NumPy arrays can store heterogeneous data types, it's generally recommended to use homogeneous data types for efficiency and performance. If you need to work with heterogeneous data, consider using separate arrays for each data type or using the `dtype=object` option with caution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9f9ea876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2.5 (3+4j) 'Hello']\n",
+      "===========\n",
+      "[1 2 3 4 5]\n",
+      "===========\n",
+      "[1.  2.5 3.3 4.8 5.1]\n",
+      "===========\n",
+      "[1.+2.j 3.+4.j 5.+6.j]\n",
+      "===========\n",
+      "[1. 2. 3. 4. 5.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a numpy array with heterogeneous data types\n",
+    "heterogeneous_array = np.array([1, 2.5, 3+4j, 'Hello'], dtype=object)\n",
+    "print(heterogeneous_array)\n",
+    "\n",
+    "print(\"===========\")\n",
+    "\n",
+    "# Creating a numpy array with homogenous int data types\n",
+    "int_array = np.array([1, 2, 3, 4, 5], dtype=int)\n",
+    "print(int_array)\n",
+    "\n",
+    "print(\"===========\")\n",
+    "\n",
+    "# Creating a numpy array with floating-point numbers\n",
+    "float_array = np.array([1.0, 2.5, 3.3, 4.8, 5.1], dtype=float)\n",
+    "print(float_array)\n",
+    "\n",
+    "print(\"===========\")\n",
+    "\n",
+    "# Creating a numpy array with complex numbers\n",
+    "complex_array = np.array([1+2j, 3+4j, 5+6j], dtype=complex)\n",
+    "print(complex_array)\n",
+    "\n",
+    "print(\"===========\")\n",
+    "\n",
+    "# Changing the datatype of an existing numpy array\n",
+    "original_array = np.array([1, 2, 3, 4, 5])\n",
+    "float_array = original_array.astype(float)\n",
+    "print(float_array)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.14.2)",
    "language": "python",
    "name": "python3"
   },
@@ -504,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
