updated jyputer notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "a4736ad7",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "2425dd1f",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "65c7a6d3",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "dae65292",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "951279de",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "a0e361d9",
    "metadata": {},
    "outputs": [
@@ -215,8 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "560 ns ± 14.1 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "266 ns ± 2.76 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "543 ns ± 8.34 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "280 ns ± 31 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "114fd0f0",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "5ef92ee7",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "9beb12db",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "355ac05e",
    "metadata": {},
    "outputs": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "9cd14e9b",
    "metadata": {},
    "outputs": [
@@ -377,8 +377,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0]\n",
-      " [0 0 0]]\n"
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
      ]
     }
    ],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "90847dad",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "637a0200",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "a16a71ff",
    "metadata": {},
    "outputs": [
@@ -471,10 +471,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.4195     0.05318058 0.23997381 0.56362527]\n",
+      "[0.61090211 0.43814592 0.6738375  0.23682478]\n",
       "=============\n",
-      "[[0.18168307 0.38060775 0.6644252  0.41587458 0.76807154]\n",
-      " [0.02829926 0.75712041 0.06066739 0.37112529 0.21499683]]\n"
+      "[[0.02498134 0.32026347 0.88279125 0.64892622 0.81000052]\n",
+      " [0.56459335 0.41770895 0.82301046 0.43068582 0.32860743]]\n"
      ]
     }
    ],
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "id": "9c06d818",
    "metadata": {},
    "outputs": [
@@ -500,8 +500,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.81436764 1.31015482 1.58669962]\n",
-      " [1.41390187 0.02803093 0.51470789]]\n"
+      "[[-0.65062356 -0.7510339  -0.35104364]\n",
+      " [ 0.74432367  0.57904742  0.51667472]]\n"
      ]
     }
    ],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "id": "e8178338",
    "metadata": {},
    "outputs": [
@@ -522,9 +522,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.26043936 0.93542289 0.03932523 0.5662606 ]\n",
-      " [0.91751321 0.55042568 0.63880451 0.59223625]\n",
-      " [0.45337012 0.34272014 0.45966359 0.54111321]]\n"
+      "[[0.52272197 0.7286141  0.0307684  0.55481381]\n",
+      " [0.38777811 0.02341249 0.18539377 0.23484578]\n",
+      " [0.12909387 0.53751437 0.7612521  0.42609184]]\n"
      ]
     }
    ],
@@ -537,18 +537,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "31ca4f90",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[5, 5, 1, 4],\n",
-       "       [5, 5, 4, 2]])"
+       "array([[1, 1, 5, 5],\n",
+       "       [5, 1, 1, 2]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "9f9ea876",
    "metadata": {},
    "outputs": [
@@ -620,9 +620,475 @@
     "print(\"===========\")\n",
     "\n",
     "# Changing the datatype of an existing numpy array\n",
-    "original_array = np.array([1, 2, 3, 4, 5])\n",
+    "original_array = np.array([1, 2, 3, 4, 5],)\n",
     "float_array = original_array.astype(float)\n",
-    "print(float_array)"
+    "print(float_array)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32223ee7",
+   "metadata": {},
+   "source": [
+    "### Arithmetic Operation in Numpy Arrays\n",
+    "- a + b  -> np.add(a, b)\n",
+    "- a - b  -> np.subtract(a, b)\n",
+    "- a * b -> np.multiply(a, b)\n",
+    "- a / b -> np.divide(a, b)\n",
+    "- a % b -> np.mod(a, b)\n",
+    "- a ** b -> np.power(a, b)\n",
+    "- 1 / a -> np.reciprocal(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4dca26bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 4 5]\n",
+      "[ 8 10 12]\n",
+      "[6 7 8]\n",
+      "[[66 28 85 46]\n",
+      " [11 11 91  9]\n",
+      " [47 40 62 17]]\n",
+      "[[60 42 25 97]\n",
+      " [53 97 42 40]\n",
+      " [85 30 83 75]]\n",
+      "[[3960 1176 2125 4462]\n",
+      " [ 583 1067 3822  360]\n",
+      " [3995 1200 5146 1275]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Arithmetic operations in Numpy arrays are more like Hadamard product (i.e element-wise multiplication)\n",
+    "# Both the array must be of same shape if not scalar\n",
+    "\n",
+    "\n",
+    "a = np.array([1, 2, 3])\n",
+    "b = np.array([7, 8, 9])\n",
+    "\n",
+    "result = a + 2\n",
+    "result1 = a + b \n",
+    "result2 = np.add(a, 5)\n",
+    "\n",
+    "\n",
+    "print(result)\n",
+    "print(result1)\n",
+    "print(result2)\n",
+    "\n",
+    "A = np.random.randint(1, 100, size=(3, 4))\n",
+    "B = np.random.randint(1, 100, size=(3, 4))\n",
+    "resultant = A * B\n",
+    "\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(resultant)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49ae1d5c",
+   "metadata": {},
+   "source": [
+    "### Arithmetic funtions in Numpy\n",
+    "\n",
+    "- np.min(a)\n",
+    "- np.max(a)\n",
+    "- np.sqrt(a)\n",
+    "- np.sin(a)\n",
+    "- np.cos(a)\n",
+    "- np.cumsum(a)\n",
+    "- np.argmin(a) -> Returns postion of min from a\n",
+    "- np.argmax(a) -> Returns postion of max from a\n",
+    "\n",
+    "For multidimensional need to pass axis. Axis = 0 respresent column and 1 respresents row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d162b194",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 2 8]\n",
+      "[1 0 1]\n",
+      "[ 1  3  6 13 14 22]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1, 2, 3], [7, 1, 8]])\n",
+    "\n",
+    "\n",
+    "# To get max across column\n",
+    "print(np.max(arr, axis=0))\n",
+    "\n",
+    "\n",
+    "# To get max position across column\n",
+    "print(np.argmax(arr, axis=0))\n",
+    "\n",
+    "# To get cummulative sum at each element\n",
+    "print(np.cumsum(arr))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670a186d",
+   "metadata": {},
+   "source": [
+    "### Numpy Shape and reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "94fd5aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 4)\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## To get shape of a Numpy array\n",
+    "## Trick:\n",
+    "## Shape -> Look at each level openning bracket from inside-out, & get the number of items from each (1, 2, 4)\n",
+    "## Dim -> Number of openning brackets\n",
+    "\n",
+    "data = [ # 1\n",
+    "    [   # 2\n",
+    "        [1, 2, 3, 4], #4\n",
+    "        [6, 7, 8, 9]\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "arr = np.array(data)\n",
+    "print(arr.shape) \n",
+    "print(arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "bfe64140",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  1  23   5   4   8   9   5   7   8   9  12 100]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Creating a Numpy array of `n` dimension\n",
+    "\n",
+    "narr = np.array([1, 23, 5, 4, 8, 9, 5, 7, 8, 9, 12, 100],ndmin=3)\n",
+    "print(narr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "36ed96fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  1,  23],\n",
+       "        [  5,   4]],\n",
+       "\n",
+       "       [[  8,   9],\n",
+       "        [  5,   7]],\n",
+       "\n",
+       "       [[  8,   9],\n",
+       "        [ 12, 100]]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reshape the numpy arr. Basically this is like reshaping to a different matrix\n",
+    "# NOTE: While reshaping check the number of elements in the original array must be equal to the new array i.e. product of all\n",
+    "# dimensions here, narr.length == 3 * 2 *  2\n",
+    "\n",
+    "np.array(narr).reshape(3, 2, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b131538a",
+   "metadata": {},
+   "source": [
+    "### Broadcasting in Numpy\n",
+    "- Broadcasting is a powerful mechanism that allows NumPy to perform operations on arrays of different shapes.\n",
+    "- When performing operations on arrays of different shapes, NumPy virtually automatically expands the smaller array to match the shape of the larger array.\n",
+    "- This allows for efficient computation without the need for explicit replication of data.\n",
+    "- Broadcasting follows a set of rules to determine how the arrays are expanded:\n",
+    "  1. If the arrays have a different number of dimensions, the shape of the smaller array is padded with ones on the left side until both shapes have the same length.\n",
+    "  2. The sizes of the dimensions are compared element-wise, starting from the rightmost dimension. `Two dimensions are compatible if they are equal or if one of them is 1`.\n",
+    "  3. If the dimensions are compatible, the array with size 1 is expanded to match the size of the other array.\n",
+    "  4. If the dimensions are not compatible, a `ValueError` is raised.\n",
+    "- Broadcasting is commonly used in operations such as addition, subtraction, multiplication, and division between arrays of different shapes.\n",
+    "- Reference: https://www.youtube.com/watch?v=P67wiuTx7l0\n",
+    "- It is important to understand the rules of broadcasting to avoid unexpected results and ensure efficient computation in NumPy.\n",
+    "Here's an example of broadcasting in NumPy:\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "# Create a 2D array\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [4, 5, 6],\n",
+    "              [7, 8, 9]])\n",
+    "# Create a 1D array\n",
+    "B = np.array([10, 20, 30])\n",
+    "# Add the 2D array and the 1D array using broadcasting\n",
+    "C = A + B\n",
+    "print(C)\n",
+    "```\n",
+    "Output:\n",
+    "```[[11 22 33]\n",
+    " [14 25 36]\n",
+    " [17 28 39]]\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2ba46206",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 22 33]\n",
+      " [14 25 36]\n",
+      " [17 28 39]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "])\n",
+    "\n",
+    "\n",
+    "B = np.array([\n",
+    "    [10, 20, 30],\n",
+    "])\n",
+    "\n",
+    "# Step 1\n",
+    "# A → (2, 3)\n",
+    "# B → (3,)\n",
+    "\n",
+    "# Step 2 -> Pad the smaller shape with 1s on the LEFT\n",
+    "# B → (1, 3)\n",
+    "\n",
+    "# (2, 3)\n",
+    "# (1, 3)\n",
+    "\n",
+    "# Step 3: Apply broadcasting rules\n",
+    "# Dimension 1: 2 vs 1 → ✅ stretch 1 to 2\n",
+    "# Dimension 2: 3 vs 3 → ✅ same\n",
+    "\n",
+    "# B becomes:\n",
+    "# [[10, 20, 30],\n",
+    "#  [10, 20, 30]]\n",
+    "\n",
+    "print(A+B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "aaffa1a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 (1, 3)\n",
+      "2 (3, 1)\n",
+      "[[1 2 3]\n",
+      " [2 4 6]\n",
+      " [3 6 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 =np.array([[1, 2, 3]])\n",
+    "v2 = np.array([[1], [2], [3]])\n",
+    "print(v1.ndim, v1.shape)\n",
+    "print(v2.ndim, v2.shape)\n",
+    "\n",
+    "\n",
+    "# Step 1\n",
+    "# v1 → (1, 3)\n",
+    "# v2 → (3,)\n",
+    "\n",
+    "\n",
+    "# Step 2 -> Pad the smaller shape with 1s on the LEFT\n",
+    "# v1 → (1, 3)\n",
+    "\n",
+    "# (1, 3)\n",
+    "# (3, 1)\n",
+    "\n",
+    "# Step 3: Apply broadcasting rules\n",
+    "# Dimension 1: 3 vs 1 → ✅ stretch 1 to 3\n",
+    "# Dimension 2: 3 vs 1 → ✅ same\n",
+    "\n",
+    "# [ 1, 2, 3] [ 1, 1, 1]\n",
+    "# [ 1, 2, 3] [ 2, 2, 2 ]\n",
+    "# [ 1, 2, 3] [ 3, 3, 3 ]\n",
+    "\n",
+    "print(v1 * v2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "323ec03a",
+   "metadata": {},
+   "source": [
+    "### Numpy Indexing and Slicing\n",
+    "- Numpy indexing and slicing allows you to access and manipulate specific elements or subsets of a NumPy array.\n",
+    "- You can use indexing to access individual elements of an array by specifying their position using square brackets `[]`.\n",
+    "- You can also use slicing to extract a subset of an array by specifying a range of indices using the colon `:` operator.\n",
+    "- Numpy supports various types of indexing, including:\n",
+    "  1. Integer indexing: Accessing elements using integer indices.\n",
+    "  2. Boolean indexing: Accessing elements using boolean arrays.\n",
+    "  3. Fancy indexing: Accessing elements using arrays of indices.\n",
+    "- Slicing can be done using the syntax `array[start:stop:step]`, where `start` is the starting index, `stop` is the ending index (exclusive), and `step` is the step size.\n",
+    "- Numpy indexing and slicing are powerful tools for manipulating and analyzing data in NumPy arrays. arrays efficiently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b6474e0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 10  20  30  40  50]\n",
+      " [ 60  70  80  90 100]\n",
+      " [110 120 130 140 150]]\n",
+      "Element at 2nd row and 3rd column: 80\n",
+      "Sub-array (2nd and 3rd rows, 2nd to 4th columns):\n",
+      "[[ 70  80  90]\n",
+      " [120 130 140]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Examples of Indexing and Slicing\n",
+    "\n",
+    "arr = np.array([[10, 20, 30, 40, 50],\n",
+    "                [60, 70, 80, 90, 100],\n",
+    "                [110, 120, 130, 140, 150]])\n",
+    "\n",
+    "print(arr)\n",
+    "# Accessing element at 2nd row and 3rd column\n",
+    "element = arr[1, 2]\n",
+    "print(\"Element at 2nd row and 3rd column:\", element)\n",
+    "\n",
+    "# Slicing to get a sub-array (2nd and 3rd rows, 2nd to 4th columns)\n",
+    "sub_array = arr[1:3, 1:4]\n",
+    "print(\"Sub-array (2nd and 3rd rows, 2nd to 4th columns):\")\n",
+    "print(sub_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "433cb63e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "(2, 2, 1, 4)\n",
+      "=========\n",
+      "[[[[ 9 10]]\n",
+      "\n",
+      "  [[13 14]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ndimarr = [\n",
+    "    [\n",
+    "        [\n",
+    "            [1, 2, 3, 4],\n",
+    "        ],\n",
+    "        [ \n",
+    "            [4, 5, 6, 7],\n",
+    "        ],\n",
+    "    ],\n",
+    "    [\n",
+    "        [\n",
+    "            [7, 8, 9, 10]\n",
+    "        ],\n",
+    "        [\n",
+    "            [11, 12, 13, 14]\n",
+    "        ]\n",
+    "    ]\n",
+    "]\n",
+    "\n",
+    "arr = np.array(ndimarr)\n",
+    "print(arr.ndim)\n",
+    "print(arr.shape)\n",
+    "\n",
+    "print(\"=========\")\n",
+    "print(arr[1:, :, :, 2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "421bb05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 5 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
+    "print(arr[2:8:2]) # [start: stop : step]"
    ]
   }
  ],
