--- a/main.ipynb
+++ b/main.ipynb
@@ -707,7 +707,14 @@
     "- np.argmin(a) -> Returns postion of min from a\n",
     "- np.argmax(a) -> Returns postion of max from a\n",
     "\n",
-    "For multidimensional need to pass axis. Axis = 0 respresent column and 1 respresents row"
+    "For multidimensional need to pass axis. `Axis = 0` respresent column and 1 respresents row\n",
+    "\n",
+    "**NOTE**: The outer dimesion of the numpy array is considered the lower axis, so as the depth of dimension increases, the axis value increases. For example, in a 3D array, axis 0 represents the outermost dimension, axis 1 represents the middle dimension, and axis 2 represents the innermost dimension.\n",
+    "```\n",
+    "axis=0 → first dimension\n",
+    "axis=1 → second dimension\n",
+    "axis=2 → third dimension\n",
+    "```"
    ]
   },
   {
@@ -1089,6 +1096,229 @@
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10])\n",
     "print(arr[2:8:2]) # [start: stop : step]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bf753a7",
+   "metadata": {},
+   "source": [
+    "### Iterating over Numpy arrays\n",
+    "- You can iterate over numpy arrays using loops, similar to how you would iterate over Python lists.\n",
+    "- For 1D arrays, you can use a simple for loop to iterate over each element.\n",
+    "- For multi-dimensional arrays, you can use nested loops to iterate over each dimension.\n",
+    "- Using numpy's built-in functions like `np.nditer()` can also help in iterating over arrays efficiently. Numpy's built-in functions like `np.nditer()` can also help in iterating over arrays efficiently"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "295c49c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "=========\n",
+      "0 1\n",
+      "1 2\n",
+      "2 3\n",
+      "3 4\n",
+      "4 5\n",
+      "5 6\n",
+      "=====\n",
+      "(0, 0) 1\n",
+      "(0, 1) 2\n",
+      "(0, 2) 3\n",
+      "(1, 0) 4\n",
+      "(1, 1) 5\n",
+      "(1, 2) 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterating over Numpy arrays\n",
+    "\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "for row in arr:\n",
+    "    for element in row:\n",
+    "        print(element)\n",
+    "\n",
+    "\n",
+    "# Note: Applying enumerate here will lose the multi-dimensional position of each element, whereas ndenumerate will retain it.\n",
+    "\n",
+    "\n",
+    "print(\"=========\")\n",
+    "for idx, x in enumerate(np.nditer(arr)): # lose multi-dimensional position\n",
+    "    print(idx, x)\n",
+    "\n",
+    "print(\"=====\")\n",
+    "for idx, x in np.ndenumerate(arr):\n",
+    "    print(idx, x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e338983",
+   "metadata": {},
+   "source": [
+    "### Numpy copy vs view\n",
+    "- In NumPy, both `copy` and `view` are used to create new arrays from existing arrays, but they have different behaviors and use cases.\n",
+    "- A `copy` creates a new array that is a separate copy of the original array. Any changes made to the copy do not affect the original array, and vice versa. This is useful when you want to create a completely independent array that can be modified without affecting the original data.\n",
+    "- A `view`, on the other hand, creates a new array that shares the same data as the original array. Changes made to the view will also affect the original array, and vice versa. This is useful when you want to create a new array that is a different representation of the same data, without the overhead of copying the data.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d10abf95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array:  [1 2 3 4]\n",
+      "Copy of the Array: [1 2 3 4]\n",
+      "After modifying original array\n",
+      "Original Array:  [ 1  2  3 45]\n",
+      "Copy of the Array: [1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Copy vs View in Numpy\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "arr_copy = arr.copy()\n",
+    "\n",
+    "print(\"Original Array: \", arr)\n",
+    "print(\"Copy of the Array:\", arr_copy)\n",
+    "\n",
+    "print(\"After modifying original array\")\n",
+    "arr[3] = 45\n",
+    "\n",
+    "print(\"Original Array: \", arr)\n",
+    "print(\"Copy of the Array:\", arr_copy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "cb3a6ac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array:  [1 2 3 4]\n",
+      "View of the original Array:  [1 2 3 4]\n",
+      "After modifying the original Array\n",
+      "Original Array:  [ 1  2  3 45]\n",
+      "View of the original Array:  [ 1  2  3 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 2, 3, 4])\n",
+    "arr_view = arr.view()\n",
+    "\n",
+    "print(\"Original Array: \", arr)\n",
+    "print(\"View of the original Array: \", arr_view)\n",
+    "\n",
+    "print(\"After modifying the original Array\")\n",
+    "\n",
+    "arr_view[3] = 45\n",
+    "\n",
+    "print(\"Original Array: \", arr)\n",
+    "print(\"View of the original Array: \", arr_view)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4c3a6e",
+   "metadata": {},
+   "source": [
+    "### Joining and Splitting Numpy arrays\n",
+    "\n",
+    "- You can join multiple numpy arrays into a single array using functions like `np.concatenate()`, `np.vstack()`, and `np.hstack()`.\n",
+    "- You can split a numpy array into multiple arrays using functions like `np.split()`, `np.vsplit()`, and `np.hsplit()`.\n",
+    "- Condition for joining and splitting is that the arrays must have compatible shapes along the specified axis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f86904a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 4 5]\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [4 5]\n",
+      " [6 7]]\n",
+      "[[1 2 4 5]\n",
+      " [3 4 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Joining Numpy arrays\n",
+    "arr1 = np.array([1, 2, 3, 4])\n",
+    "arr2 = np.array([4, 5])\n",
+    "\n",
+    "print(np.concatenate([arr1, arr2], axis=0)) # axis=0 is default \n",
+    "\n",
+    "arr3 = np.array([[1, 2], [3, 4]])\n",
+    "arr4 = np.array([[4, 5], [6, 7]])\n",
+    "\n",
+    "# [\n",
+    "#     [1, 2],\n",
+    "#     [3, 4]\n",
+    "# ]\n",
+    "# [\n",
+    "#     [4, 5],\n",
+    "#     [6, 7]\n",
+    "# ]\n",
+    "\n",
+    "print(np.concatenate([arr3, arr4], axis=0)) # Axis=0 outer dimensions is merged\n",
+    "\n",
+    "print(np.concatenate([arr3, arr4], axis=1)) # Axis=1 outer dimensions is merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "2032d91a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 4]\n",
+      " [2 5]\n",
+      " [3 5]\n",
+      " [4 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1, 2, 3, 4])\n",
+    "arr2 = np.array([4, 5, 5, 8])\n",
+    "\n",
+    "print(np.stack([arr1, arr2], axis=1))"
    ]
   }
  ],
