--- a/main.ipynb
+++ b/main.ipynb
@@ -1250,7 +1250,14 @@
     "\n",
     "- You can join multiple numpy arrays into a single array using functions like `np.concatenate()`, `np.vstack()`, and `np.hstack()`.\n",
     "- You can split a numpy array into multiple arrays using functions like `np.split()`, `np.vsplit()`, and `np.hsplit()`.\n",
-    "- Condition for joining and splitting is that the arrays must have compatible shapes along the specified axis."
+    "- Condition for joining and splitting is that the arrays must have compatible shapes along the specified axis.\n",
+    "\n",
+    "#####  What is the difference between vstack, hstack, stack and concatenate in numpy?\n",
+    "- `np.concatenate()` is a general-purpose function that can join arrays along any specified axis.\n",
+    "- `np.vstack()` is a specialized function that stacks arrays vertically (row-wise) along the first axis (axis=0).\n",
+    "- `np.hstack()` is another specialized function that stacks arrays horizontally (column-wise) along the second axis (axis=1).\n",
+    "- `np.stack()` is a function that joins arrays along a new axis, creating a new dimension.\n",
+    "- In summary, `concatenate` is a general function for joining arrays, while `vstack`, `hstack`, and `stack` are specialized functions for specific stacking operations."
    ]
   },
   {
@@ -1299,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "2032d91a",
    "metadata": {},
    "outputs": [
@@ -1307,18 +1314,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 4]\n",
-      " [2 5]\n",
-      " [3 5]\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "[[1 5]\n",
+      " [2 6]\n",
+      " [3 7]\n",
       " [4 8]]\n"
      ]
     }
    ],
    "source": [
     "arr1 = np.array([1, 2, 3, 4])\n",
-    "arr2 = np.array([4, 5, 5, 8])\n",
+    "arr2 = np.array([5, 6, 7, 8])\n",
     "\n",
-    "print(np.stack([arr1, arr2], axis=1))"
+    "\n",
+    "# stack -> creates a new axis and adds elements along the specified axis from the given stack axis\n",
+    "\n",
+    "print(np.stack((arr1, arr2), axis=0))\n",
+    "print(np.stack((arr1, arr2), axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec94f962",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "=====\n",
+      "[1 2 3 4 5 6 7 8]\n",
+      "=====\n",
+      "[[  9  10  11  12 131 141 151 161]\n",
+      " [ 13  14  15  16 171 181 191 121]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr3 = np.array([1, 2, 3, 4])\n",
+    "arr4 = np.array([5, 6, 7, 8])\n",
+    "arr5 = np.array([[9, 10, 11, 12], [13, 14, 15, 16]])\n",
+    "arr6 = np.array([[131, 141, 151, 161], [171, 181, 191, 121]])\n",
+    "\n",
+    "# How vstack works -> Vertical stack i.e. along rows\n",
+    "# Step 1: Converts inputs to 2D arrays\n",
+    "# Step 2: Stacks them along the first axis (rows)\n",
+    "# Step 3: Returns the new stacked array\n",
+    "print(np.vstack((arr3, arr4)))\n",
+    "\n",
+    "print(\"=====\")\n",
+    "\n",
+    "\n",
+    "# How hstack works -> Horizontal stack i.e. along columns\n",
+    "# if arrays are 1D:\n",
+    "#     concatenate along axis=0\n",
+    "# else:\n",
+    "#     concatenate along axis=1\n",
+    "\n",
+    "print(np.hstack([arr3, arr4]))\n",
+    "\n",
+    "print(\"=====\")\n",
+    "\n",
+    "\n",
+    "# [\n",
+    "#     [9, 10, 11, 12], \n",
+    "#     [13, 14, 15, 16]\n",
+    "# ]\n",
+    "# [\n",
+    "#     [131, 141, 151, 161], \n",
+    "#     [171, 181, 191, 121]\n",
+    "# ]\n",
+    "\n",
+    "print(np.hstack((arr5, arr6)))"
    ]
   }
  ],
