added new topic

--- a/main.ipynb
+++ b/main.ipynb
@@ -1391,6 +1391,69 @@
     "\n",
     "print(np.hstack((arr5, arr6)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a2b856c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 2]), array([3, 4]), array([5, 6])]\n",
+      "=====\n",
+      "[array([[ 1,  2],\n",
+      "       [23, 56]]), array([[ 3,  4],\n",
+      "       [78, 90]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Splitting Numpy arrays\n",
+    "\n",
+    "\n",
+    "# `split()` requires the input array must be divisible by the number of splits i.e. arr.length % no.of splits == 0\n",
+    "# split() outputs all splits will be of equal size\n",
+    "\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6])\n",
+    "n_arr = np.split(arr, 3) # Here 3 is the number of parts to split into\n",
+    "print(n_arr)\n",
+    "\n",
+    "print(\"=====\")\n",
+    "\n",
+    "\n",
+    "arr1 = np.array([[1, 2, 3, 4], [23, 56, 78, 90]])\n",
+    "# [\n",
+    "#     [1, 2, 3, 4], \n",
+    "#     [23, 56, 78, 90]\n",
+    "# ]\n",
+    "\n",
+    "s_arr = np.split(arr1, 2, axis=1) # Split along columns\n",
+    "print(s_arr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "5bc46491",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1, 2, 3]), array([4, 5]), array([6, 7]), array([8, 9])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Split array with unequal sizes\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9])\n",
+    "n_arr = np.array_split(arr, 4) # Here arr.length is not divisible by 4\n",
+    "print(n_arr)\n"
+   ]
   }
  ],
  "metadata": {
